@@ -10,6 +10,7 @@ Summary -- Release highlights
 
 New checkers
 ============
+
 * ``unnecessary-ellipsis``: Emitted when the ellipsis constant is used unnecessarily.
 
   Closes #5460
@@ -19,6 +20,10 @@ Removed checkers
 
 Extensions
 ==========
+* New extension ``import-private-name``: indicate imports of external packages and objects
+  that are prefixed with ``_`` and likely to be private.
+
+  Closes #5463
 
 * Pyreverse - add output in mermaid-js format and html which is an mermaid js diagram with html boilerplate
 
