@@ -1,0 +1,11 @@
+import-private-name:3:0:3:24::Imported private module (_world):UNDEFINED
+import-private-name:4:0:4:25::Imported private module (_world):UNDEFINED
+import-private-name:5:0:5:23::Imported private object (_house):UNDEFINED
+import-private-name:6:0:6:29::Imported private object (_b, _d):UNDEFINED
+import-private-name:7:0:7:30::Imported private module (_city):UNDEFINED
+import-private-name:8:0:8:28::Imported private object (_d):UNDEFINED
+import-private-name:10:0:10:13::Imported private module (_house):UNDEFINED
+import-private-name:11:0:11:29::Imported private module (_house, _chair, _stair):UNDEFINED
+import-private-name:12:0:12:28::Imported private module (_chair, _stair):UNDEFINED
+import-private-name:24:0:24:28::Imported private object (_private):UNDEFINED
+import-private-name:25:0:25:24::Imported private object (_private):UNDEFINED
